# question-bank-system

./: .env  .env.example  .gitignore  .web_pid  ARCHITECTURE_REVIEW_T003.md  CODE  CODE_REVIEW_REPORT.md  CODE_REVIEW_REPORT_T003.md  COMMIT_SUMMARY.md  COVERAGE_PROGRESS_T010.md  FRONTEND_VALIDATION_REPORT.md  ONE_COMMAND_START.md  PROJECT_SUMMARY.md  README.md  T010_COVERAGE_MIDTERM_REPORT.md  T012_REVIEW_REPORT.md  T013_COVERAGE_REVIEW.md  TASK_T001_STATUS.md  TASK_T003_STATUS.md  TASK_T009_STATUS.md  TASK_T010_STATUS.md  TASK_T011_ARCHITECT_ANALYSIS.md  TASK_T011_STATUS.md  TASK_T013_ARCHITECT_ANALYSIS.md  TASK_T013_STATUS.md  conftest.py  diagnose.py  kill_all_python.ps1  migrate.py  pytest.ini  requirements.txt  run  run.ps1  run.sh  run_tests.sh  run_web.bat  start.py
agent/: __init__.py  config.py
config/: .gitignore  README.md  agent.json.example  pyproject.toml  requirements-dev.txt  requirements.txt
core/: exceptions.py  models.py  services.py
data/: question_bank.db.backup.20260226_212430
deployments/: Dockerfile  docker-compose.yml  nginx.conf
docs/: ARCHITECTURE_ANALYSIS_REPORT.md  ARCHITECTURE_REPORT_20260317_2215.md  CODE_REVIEW_REPORT_20260317.md  DEPLOYMENT_GUIDE.md  ERROR_TROUBLESHOOTING.md  FIX_REPORT_T015.md  IMPLEMENTATION_SUMMARY.md  OLLAMA_DEPLOYMENT.md  OLLAMA_SETUP.md  PROJECT_RULES.md  QUICK_START_GUIDE.md  SYSTEM_ARCHITECTURE_ANALYSIS.md  TEST_COVERAGE_REPORT.md  TEST_STRATEGY_T016.md  VECTOR_VERSION_TRACKING.md  WINDOWS_SETUP.md  new_api_design.md
mcp_server/: config.py  server.py
scripts/: MSYS2_FIX.sh  QUICK_START.sh  QUICK_START_WINDOWS.bat  SCRIPT_USAGE.md  SETUP_MSYS2.sh  SIMPLE_SETUP.sh  UV_SETUP.sh  force_restart.sh  launch_all.py  launch_project.sh  post_commit_check.sh  pre_commit_test.sh  quick_start.sh  quick_start_project.sh  rebuild_embeddings.py  (+11 more)
(+244 files in other folders)
