[project]
name = "question-bank-system"
version = "1.0.0"
description = "题库管理系统"
authors = [
    {name = "OpenClaw Assistant", email = "assistant@openclaw.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]