[project]
name = "question-bank-system"
version = "1.0.0"
description = "题库管理系统"
authors = [
    {name = "OpenClaw Assistant", email = "assistant@openclaw.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "pillow>=10.0.0",
    "aiofiles>=23.0.0",
    
    # OCR 依赖（PaddleOCR - 推荐用于中文场景）
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",
    
    # OCR 依赖（Tesseract - 备选方案）
    "pytesseract>=0.3.10",
]